// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mailbox should decrypt full message body: fullMessageBody 1`] = `
"<ul>
	<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
	<li>Aliquam tincidunt mauris eu risus.</li>
	<li>Vestibulum auctor dapibus neque.</li>
</ul>"
`;

exports[`mailbox should encrypt and post received message: hashedFrom 1`] = `
[
  97,
  108,
  105,
  99,
  101,
  64,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post received message: hashedFrom 2`] = `
[
  97,
  108,
  105,
  99,
  101,
  64,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post received message: hashedOwner 1`] = `
[
  98,
  111,
  98,
  64,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post received message: hashedOwner 2`] = `
[
  48,
  120,
  57,
  50,
  100,
  56,
  102,
  49,
  48,
  50,
  52,
  56,
  99,
  54,
  97,
  51,
  57,
  53,
  51,
  99,
  99,
  51,
  54,
  57,
  50,
  97,
  56,
  57,
  52,
  54,
  53,
  53,
  97,
  100,
  48,
  53,
  100,
  54,
  49,
  101,
  102,
  98,
  64,
  101,
  116,
  104,
  101,
  114,
  101,
  117,
  109,
  46,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post received message: hashedTo 1`] = `
[
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
]
`;

exports[`mailbox should encrypt and post received message: hashedTo 2`] = `
[
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
]
`;

exports[`mailbox should encrypt and post received message: message id 0x92d8f10248c6a3953cc3692a894655ad05d61efb@ethereum.mailchain.test 1`] = `
{
  "bcc": [
    "jane@mailchain.test",
    "maria@mailchain.test",
  ],
  "cc": [
    "0x92d8f10248c6a3953cc3692a894655ad05d61efb@ethereum.mailchain.test",
    "john@mailchain.test",
  ],
  "from": "alice@mailchain.test",
  "hasAttachment": false,
  "isRead": false,
  "mailbox": SECP256K1PublicKey {
    "bytes": Uint8Array [
      2,
      105,
      217,
      8,
      81,
      14,
      53,
      91,
      235,
      29,
      91,
      242,
      223,
      129,
      41,
      229,
      182,
      64,
      30,
      25,
      105,
      137,
      30,
      128,
      22,
      160,
      178,
      48,
      7,
      57,
      187,
      176,
      6,
    ],
    "curve": "secp256k1",
  },
  "messageId": "6ddf55461c21f3fa1a0b33ee2debfd406311ba4777528194e830f4fd63ef52f7",
  "owner": "0x92d8f10248c6a3953cc3692a894655ad05d61efb@ethereum.mailchain.test",
  "snippet": "- Lorem ipsum dolor sit amet, consectetuer adipiscing elit. - Aliquam tincidunt mauris eu risus. -",
  "subject": "💌 Dummy MailData subject 😉",
  "systemLabels": [
    "unread",
    "inbox",
    "rule-engine",
  ],
  "timestamp": 2022-06-14T00:00:00.000Z,
  "to": [
    "bob@mailchain.test",
    "0xd5ab4ce3605cd590db609b6b5c8901fdb2ef7fe6@ethereum.mailchain.test",
    "tim@eth.mailchain.test",
  ],
}
`;

exports[`mailbox should encrypt and post received message: message id bob@mailchain.test 1`] = `
{
  "bcc": [
    "jane@mailchain.test",
    "maria@mailchain.test",
  ],
  "cc": [
    "0x92d8f10248c6a3953cc3692a894655ad05d61efb@ethereum.mailchain.test",
    "john@mailchain.test",
  ],
  "from": "alice@mailchain.test",
  "hasAttachment": false,
  "isRead": false,
  "mailbox": SECP256K1PublicKey {
    "bytes": Uint8Array [
      2,
      105,
      217,
      8,
      81,
      14,
      53,
      91,
      235,
      29,
      91,
      242,
      223,
      129,
      41,
      229,
      182,
      64,
      30,
      25,
      105,
      137,
      30,
      128,
      22,
      160,
      178,
      48,
      7,
      57,
      187,
      176,
      6,
    ],
    "curve": "secp256k1",
  },
  "messageId": "793dd5d44e166bc50051c959b7668beabfd374fc1ab15ba5601a8fdc566806ac",
  "owner": "bob@mailchain.test",
  "snippet": "- Lorem ipsum dolor sit amet, consectetuer adipiscing elit. - Aliquam tincidunt mauris eu risus. -",
  "subject": "💌 Dummy MailData subject 😉",
  "systemLabels": [
    "unread",
    "inbox",
    "rule-engine",
  ],
  "timestamp": 2022-06-14T00:00:00.000Z,
  "to": [
    "bob@mailchain.test",
    "0xd5ab4ce3605cd590db609b6b5c8901fdb2ef7fe6@ethereum.mailchain.test",
    "tim@eth.mailchain.test",
  ],
}
`;

exports[`mailbox should encrypt and post sent message: hashedFrom 1`] = `
[
  97,
  108,
  105,
  99,
  101,
  64,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post sent message: hashedOwner 1`] = `
[
  97,
  108,
  105,
  99,
  101,
  64,
  109,
  97,
  105,
  108,
  99,
  104,
  97,
  105,
  110,
  46,
  116,
  101,
  115,
  116,
]
`;

exports[`mailbox should encrypt and post sent message: hashedTo 1`] = `
[
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    98,
    111,
    98,
    64,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    48,
    120,
    100,
    53,
    97,
    98,
    52,
    99,
    101,
    51,
    54,
    48,
    53,
    99,
    100,
    53,
    57,
    48,
    100,
    98,
    54,
    48,
    57,
    98,
    54,
    98,
    53,
    99,
    56,
    57,
    48,
    49,
    102,
    100,
    98,
    50,
    101,
    102,
    55,
    102,
    101,
    54,
    64,
    101,
    116,
    104,
    101,
    114,
    101,
    117,
    109,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
  [
    116,
    105,
    109,
    64,
    101,
    116,
    104,
    46,
    109,
    97,
    105,
    108,
    99,
    104,
    97,
    105,
    110,
    46,
    116,
    101,
    115,
    116,
  ],
]
`;

exports[`mailbox should encrypt and post sent message: sent message id 1`] = `"8abcfc68fff062b5776787aee9a56f0d6ba84c5c8e7a977309825b76fbe86116"`;
